<?xml version="1.0" encoding="utf-8"?>
<!-- INTEL CONFIDENTIAL
     Copyright 2015 Intel Corporation

     The source code contained or described herein and all documents
     related to the source code ("Material") are owned by Intel
     Corporation or its suppliers or licensors. Title to the Material
     remains with Intel Corporation or its suppliers and
     licensors. The Material contains trade secrets and proprietary
     and confidential information of Intel or its suppliers and
     licensors. The Material is protected by worldwide copyright and
     trade secret laws and treaty provisions. No part of the Material
     may be used, copied, reproduced, modified, published, uploaded,
     posted, transmitted, distributed, or disclosed in any way without
     Intel's prior express written permission.

     No license under any patent, copyright, trade secret or other
     intellectual property right is granted to or conferred upon you
     by disclosure or delivery of the Materials, either expressly, by
     implication, inducement, estoppel or otherwise. Any license under
     such intellectual property rights must be express and approved by
     Intel in writing.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/settings_event_report_management_title"
        android:summary="@string/settings_event_report_management_summary"
        android:key="@string/settings_event_report_management_key"
        android:defaultValue="@string/settings_event_report_management_value_default"
        android:entries="@array/uploadStateMenuText"
        android:entryValues="@array/uploadStateMenuValues" />

    <PreferenceCategory
        android:title="@string/settings_event_data_category_title"
        android:key="@string/settings_event_data_category_key" >

        <CheckBoxPreference
            android:key="@string/settings_event_data_enable_key"
            android:title="@string/settings_event_data_enable_title"
            android:summary="@string/settings_event_data_enable_summary"
            android:defaultValue="@string/settings_event_data_enable_value_default" />

        <com.intel.crashreport.CrashLogsListPrefs
            android:key="@string/settings_event_data_types_key"
            android:dependency="@string/settings_event_data_enable_key"
            android:title="@string/settings_event_data_types_title"
            android:summary="@string/settings_event_data_types_summary"
            android:dialogTitle="@string/settings_event_data_types_dialog_title"
            android:entries="@array/reportCrashLogsTypeText"
            android:entryValues="@array/reportCrashLogsTypeValues"
            android:defaultValue="@string/settings_event_data_types_value_default" />

        <CheckBoxPreference
            android:title="@string/settings_connection_wifi_only_title"
            android:defaultValue="@string/settings_connection_wifi_only_value_default"
            android:summary="@string/settings_connection_wifi_only_summary"
            android:key="@string/settings_connection_wifi_only_key"
            android:dependency="@string/settings_event_data_enable_key" />

        <CheckBoxPreference
            android:title="@string/settings_all_crash_notification_title"
            android:defaultValue="@string/settings_all_crash_notification_value_default"
            android:summary="@string/settings_all_crash_notification_summary"
            android:key="@string/settings_all_crash_notification_key" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_bugzilla_category_title">

        <EditTextPreference
            android:key="@string/settings_bugzilla_user_last_name_key"
            android:defaultValue="@string/settings_bugzilla_user_last_name_value_default"
            android:summary="@string/settings_bugzilla_user_last_name_summary"
            android:title="@string/settings_bugzilla_user_last_name_title"
            android:inputType="text|textNoSuggestions" />

        <EditTextPreference
            android:key="@string/settings_bugzilla_user_first_name_key"
            android:defaultValue="@string/settings_bugzilla_user_first_name_value_default"
            android:summary="@string/settings_bugzilla_user_first_name_summary"
            android:title="@string/settings_bugzilla_user_first_name_title"
            android:inputType="text|textNoSuggestions" />

        <EditTextPreference
            android:key="@string/settings_bugzilla_user_email_key"
            android:defaultValue="@string/settings_bugzilla_user_email_value_default"
            android:summary="@string/settings_bugzilla_user_email_summary"
            android:title="@string/settings_bugzilla_user_email_title"
            android:inputType="textEmailAddress|textNoSuggestions" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_communication_category_title">

        <CheckBoxPreference
            android:key="@string/settings_gcm_activation_key"
            android:title="@string/settings_gcm_activation_title"
            android:summary="@string/settings_gcm_activation_summary"
            android:defaultValue="@string/settings_gcm_activation_value_default" />

        <CheckBoxPreference
            android:key="@string/settings_gcm_sound_activation_key"
            android:title="@string/settings_gcm_sound_activation_title"
            android:summary="@string/settings_gcm_sound_activation_summary"
            android:defaultValue="@string/settings_gcm_notification_default_value" />

    </PreferenceCategory>

</PreferenceScreen>
