<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2019 Intel Corporation

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0


 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radiogroup_upload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_upload" />

        <RadioButton
            android:id="@+id/radioButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/upload_log_DEFAULT" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioButtonAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/upload_log_ALL" />
    </RadioGroup>

    <TextView
        android:id="@+id/aplog_summary_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplog_summary" />

    <EditText
        android:id="@+id/aplog_summary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_log_button" />

    <TextView
            android:id="@+id/textViewExtra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_data_upload" />

    <CheckBox
        android:id="@+id/checkBoxThermal"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/extra_data_thermal" />

</LinearLayout>
